<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lista2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/listareg"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="362dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.96"
        android:gravity="center" >

        <Button
            android:id="@+id/condividi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_condividi"
            android:textSize="18dp" />

        <Button
            android:id="@+id/elimina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_elimina"
            android:textSize="18dp" />

        <Button
            android:id="@+id/eliminatutto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminatutto"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>